--- a/css/main.css
+++ b/css/main.css
@@ -47,7 +47,7 @@ text-decoration: none;
 
   #div-servicios{
     
-    background-image: url(/assets/diseno\ 5.jpg);
+    background-image: url(./assets/diseno\ 5.jpg);
     opacity: 80%;
     overflow: hidden;
     height: 100vh;
@@ -59,7 +59,7 @@ text-decoration: none;
 
   #div-nosotros{
     
-    background-image: url(/assets/manzana\ 1.jpg);
+    background-image: url(./assets/manzana\ 1.jpg);
     opacity: 80%;
     overflow: hidden;
     height: 100vh;
@@ -69,7 +69,7 @@ text-decoration: none;
 
   #div-productos{
     
-    background-image: url(/assets/Mold\ Design\ &\ Fabricate.jpg);
+    background-image: url(./assets/Mold\ Design\ &\ Fabricate.jpg);
     opacity: 80%;
     overflow: hidden;
     height: 100vh;
@@ -79,7 +79,7 @@ text-decoration: none;
 
   #div-contacto{
     
-    background-image: url(/assets/Operadora\ 2.jpg);
+    background-image: url(./assets/Operadora\ 2.jpg);
     opacity: 80%;
     overflow: hidden;
     height: 100vh;
